Remove code blocking indexing of text/plain files without .txt extension

REVIEW: 127362
BUG: 358098